--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         </div>
     </div>
     
-    <div id="content">Loading content from https://content-c5v.pages.dev/...</div>
+    <div id="content">Loading content from https://rapid-credit-31a4.iggr.workers.dev/...</div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const loadingScreen = document.getElementById('loading-screen');
             const contentDiv = document.getElementById('content');
-            const targetDomain = 'https://content-c5v.pages.dev';
+            const targetDomain = 'https://rapid-credit-31a4.iggr.workers.dev/';
             
             // Always use the root URL of the target domain
             const targetUrl = targetDomain + '/';
