--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img id="loading-logo" src="https://media.discordapp.net/attachments/1354830701421138086/1370052229347934329/image-removebg-preview.png?ex=681e1811&is=681cc691&hm=a4135f42c652fa46aa9cea1f211c2c476e505a0c01c03e1b803d04ea174e8240&=&format=webp&quality=lossless" alt="Loading...">
+        <img id="loading-logo" src="https://media.discordapp.net/attachments/1354830701421138086/1370439559598444657/wireframe-3d__3_-removebg-preview.png?ex=681f80cc&is=681e2f4c&hm=5e0fa1b19fc4c5b515d61c0c18cd491077643382d8954fb4ee140a3792874d48&=&format=webp&quality=lossless" alt="Loading...">
         <div class="loading-text">Loading Content Fetcher...</div>
         <div class="progress-bar">
             <div class="progress"></div>
         </div>
     </div>
     
-    <div id="content">Loading content from https://rapid-credit-31a4.iggr.workers.dev/...</div>
+    <div id="content">Loading content from https://content-c5v.pages.dev/...</div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const loadingScreen = document.getElementById('loading-screen');
             const contentDiv = document.getElementById('content');
-            const targetDomain = 'https://rapid-credit-31a4.iggr.workers.dev/';
+            const targetDomain = 'https://content-c5v.pages.dev/';
             
             // Always use the root URL of the target domain
             const targetUrl = targetDomain + '/';
